# mithril-vault

./: .gitignore  .gitmessage  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTION_PLAN_ISSUE_13.md  LICENSE.md  README.md  SECURITY.md  cliff.toml  codecov.yml  commitlint.config.js  deny.toml  eslint.config.js  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependency-review.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  coverage.yml  license-check.yml  pr-validation.yml  release-build.yml  release-tag.yml  release.yml  sbom.yml  security.yml
.husky/: pre-commit  pre-push
.opencode/agent/: review-backend.md  review-devops.md  review-frontend.md  review-lead.md
docs/: signed-commits.md
docs/architecture/: kdbx-library-decision.md
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  entries.rs  generator.rs  groups.rs  mod.rs  secure_storage.rs  settings.rs
src-tauri/src/domain/: kdbx.rs  mod.rs  secure.rs
src-tauri/src/dto/: database.rs  entry.rs  error.rs  group.rs  lock.rs  mod.rs
src-tauri/src/models/: database.rs  entry.rs  error.rs  group.rs  mod.rs
src-tauri/src/services/: clipboard.rs  crypto.rs  kdbx.rs  keychain.rs  mod.rs  secure_storage.rs  settings.rs
src-tauri/src/services/file_lock/: mod.rs
src-tauri/src/services/kdbx/: create.rs  entries.rs  groups.rs  header.rs  key.rs  mapping.rs  mod.rs  open.rs  save.rs
src-tauri/src/utils/: atomic_write.rs  mod.rs
src-tauri/tests/: app_setup_test.rs  command_handlers_test.rs  commands.rs  dto_error_test.rs  dto_lock_test.rs  kdbx_create.rs  kdbx_entries_groups.rs  kdbx_header.rs  kdbx_integration.rs  kdbx_open.rs  kdbx_save.rs  secure_memory.rs  services.rs
src-tauri/tests/commands/: database_test.rs  entries_test.rs  groups_test.rs  settings_test.rs
src-tauri/tests/fixtures/: README.md  test-kdbx3-low-KDF.kdbx  test-kdbx3.kdbx  test-kdbx4-low-KDF.kdbx  test-kdbx4.kdbx  test-keyfile-kdbx4-low-KDF.kdbx  test-keyfile-kdbx4.kdbx  test-keyfile-only-kdbx4-low-KDF.kdbx  test-keyfile-only-kdbx4.kdbx  test-keyfile.keyx
src-tauri/tests/services/: settings_service_test.rs  settings_service_unitlike_test.rs
src-tauri/tests/support/: mod.rs
src/components/: app-sidebar.tsx  data-table.tsx  index.ts  nav-actions.tsx  nav-entry-groups.tsx  nav-main.tsx  theme-provider.tsx
src/components/entries/: EntryItemDetails.tsx  EntryItemDetailsEmpty.tsx  EntryList.tsx  EntryListItem.tsx  actions-mobile-entries.tsx  nav-entries.tsx
src/components/layout/: app-settings-sidebar.tsx  app-sidebar.tsx  database-switcher.tsx  nav-main.tsx  (+5 more)
src/hooks/: use-database-info.ts  use-recent-databases.ts
src/lib/: constants.ts  formTypes.ts  index.ts  query-keys.ts  tauri.ts  types.ts  utils.ts
src/mock/: tags-mock-data.json
src/routes/: __root.tsx  index.tsx  new-db.tsx  open-db.tsx  password-generator.tsx
src/test/: setup.ts
src/views/: DesktopContentArea.tsx  MobileContentArea.tsx  UnlockView.tsx
(+32 files in other folders)
