[package]
name = "mithril-vault"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mithril_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
iota_stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# KDBX (KeePass) database support
# save_kdbx4 enables database creation and saving functionality
keepass = { version = "0.8", features = ["save_kdbx4"] }
# Required for KDF configuration (Argon2id version parameter) - must match keepass's dependency
rust-argon2 = "3.0"
secstr = "0.5"

# File locking support
fs4 = "0.12"                                         # Cross-platform file locking (flock/LockFileEx)
hostname = "0.4"                                     # Get machine hostname for lock file metadata
sysinfo = { version = "0.33", default-features = false, features = ["system"] }  # PID validation
chrono = { version = "0.4", features = ["serde"] }   # Timestamp handling for lock files

[profile.dev.package.scrypt]
opt-level = 3

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"
unused = "warn"


[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
